# shadeform-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: api_reference.md  examples.md  index.md
docs/api/: index.md
scripts/: publish.sh
shadeform/: __init__.py  client.py  error.py
shadeform/resources/: __init__.py  base.py  instances.py  sshkeys.py  templates.py  volumes.py
shadeform/utils/: __init__.py  helpers.py
tests/: __init__.py  manual_tests.py  test_client.py  test_instance_types.py  test_utils.py
tests/test_resources/: __init__.py  test_instances.py  test_sshkeys.py  test_templates.py  test_volumes.py
