[metadata]
license_file = LICENSE

[flake8]
max-line-length = 96
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[coverage:run]
branch = True
source = shadeform

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[coverage:html]
directory = htmlcov

[tool:pytest]
addopts = -v --cov=shadeform --cov-report=term-missing
testpaths = tests
python_files = test_*.py
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[mypy-requests.*]
ignore_missing_imports = True

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[aliases]
test = pytest